--- a/templates/battle/select_pokemon.html.twig
+++ b/templates/battle/select_pokemon.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Pokemon - Home
+{% block title %}Elige pokemon
 {% endblock %}
 
 {% block body %}
@@ -25,6 +25,7 @@
 					<span>Fuerza:
 						{{ pokemon.strength }}</span>
 				</div> 
+				<a href="{{ path('app_combat_logical', {'id_ally': pokemon.id, 'id_enemy': id_enemy}) }}">Seleccionar</a>
             </div>
 
 		{% endfor %}
