Create function train pokemon

--- a/templates/pokedex/pokedex.html.twig
+++ b/templates/pokedex/pokedex.html.twig
@@ -12,12 +12,17 @@
     <div>
         {% for pokedexPokemon in pokedexPokemons %}
             <div style="margin-bottom: 20px;">
-                <p><b>Nombre:</b> {{ pokedexPokemon.pokemon.name }}</p>
-                <p><b>Tipo:</b> {{ pokedexPokemon.pokemon.type ? pokedexPokemon.pokemon.type|join(', ') : 'No especificado' }}</p>
-                <p><img src="https://img.pokemondb.net/artwork/{{ pokedexPokemon.pokemon.name|url_encode }}.jpg" alt="Imagen de {{ pokedexPokemon.pokemon.name }}" width="100" height="100"/></p>
-                <p><b>Nivel:</b> {{ pokedexPokemon.level }}</p>
-                <p><b>Fuerza:</b> {{ pokedexPokemon.strength }}</p>
+                <p><b>Nombre:</b> {{ pokedexPokemon.pokemon.name }}</p><br>
+                <p><b>Tipo:</b> {{ pokedexPokemon.pokemon.type ? pokedexPokemon.pokemon.type|join(', ') : 'No especificado' }}</p><br>
+                <p><img src="https://img.pokemondb.net/artwork/{{ pokedexPokemon.pokemon.name|url_encode }}.jpg" alt="Imagen de {{ pokedexPokemon.pokemon.name }}" width="100" height="100"/></p><br>
+                <p><b>Nivel:</b> {{ pokedexPokemon.level }}</p><br>
+                <p><b>Fuerza:</b> {{ pokedexPokemon.strength }}</p><br>
+                
+                <form action="{{ path('pokemon_train', {'id': pokedexPokemon.id}) }}" method="POST">
+                    <button type="submit" class="btn btn-primary">Entrenar</button>
+                </form>
             </div>
+            <br><br>
         {% endfor %}
     </div>
 {% endif %}
