--- a/templates/user/catch.html.twig
+++ b/templates/user/catch.html.twig
@@ -3,7 +3,7 @@
 {% block title %}PokemonApp - Usuario Atrapar{% endblock %}
 
 {% block body %}
-    <h1>Cazar a {{ pokemon.name }} ({{ pokemon.type|json_encode() }})</h1>
+    <h1>Cazar a {{ pokemon.name }} ({{ pokemon.type|join(', ') }})</h1>
 
     <img src="https://img.pokemondb.net/artwork/{{ pokemon.name|url_encode }}.jpg" alt="Imagen de {{ pokemon.name }}" width="200" height="200"/>
 
