--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,32 +5,36 @@
 
 {% block body %}
 	{% if app.user %}
-		<h1>Mis pokemons</h1>
 
-		<div class="container-cards">
+		<h1>Tu Pokedex</h1>
 
-			{% if pokemons|length == 0 %}
-				<i>No tienes pokemons...</i>
-			{% else %}
-				{% for pokemon in pokemons %}
-
+		{% if pokedexPokemons is empty %}
+			<p>No tienes ningún Pokémon en tu Pokedex.</p>
+		{% else %}
+			<div class="container-cards">
+				{% for pokedexPokemon in pokedexPokemons %}
 					<div class="card">
-						<img src="https://img.pokemondb.net/artwork/{{ pokemon.name|url_encode }}.jpg" alt={{ pokemon.name }}/>
-						<h2>
-							{{ pokemon.name }}
-						</h2>
-						<div>
-							<span>Nivel:
-								{{ pokemon.level }}</span>
-							-
-							<span>Fuerza:
-								{{ pokemon.strength }}</span>
-						</div>
+						<p>
+							<b>Nombre:</b>
+							{{ pokedexPokemon.pokemon.name }}</p><br>
+						<p>
+							<b>Tipo:</b>
+							{{ pokedexPokemon.pokemon.type ? pokedexPokemon.pokemon.type|join(', ') : 'No especificado' }}</p><br>
+						<p><img src="https://img.pokemondb.net/artwork/{{ pokedexPokemon.pokemon.name|url_encode }}.jpg" alt="Imagen de {{ pokedexPokemon.pokemon.name }}" width="100" height="100"/></p><br>
+						<p>
+							<b>Nivel:</b>
+							{{ pokedexPokemon.level }}</p><br>
+						<p>
+							<b>Fuerza:</b>
+							{{ pokedexPokemon.strength }}</p><br>
+
+						<form action="{{ path('pokemon_train', {'id': pokedexPokemon.id}) }}" method="POST">
+							<button type="submit" class="btn btn-primary">Entrenar</button>
+						</form>
 					</div>
-
+					<br><br>
 				{% endfor %}
-			{% endif %}
-
-		</div>
+			</div>
+		{% endif %}
 	{% endif %}
 {% endblock %}
