--- a/templates/battle/index.html.twig
+++ b/templates/battle/index.html.twig
@@ -24,7 +24,7 @@
     <br>
 
     <div class="center">
-        <a href="{{ path('app_battle_select', {'id': pokemon.id}) }}">
+        <a href="{{ path('app_battle_winner_selection', {'id': pokemon.id}) }}">
             <img src="https://cdn-icons-png.freepik.com/512/68/68207.png" alt="Espadas" width="50px" height="auto"/>
         </a>
     <div>
