--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,8 @@
                             <a href="{{ path('app_pokemon_index') }}">Lista pokemon</a>
 						{% endif %}
 					{% endfor %}
-					<a href="{{ path('app_battle') }}">Enfrentamiento</a>
+					<a href="{{ path('app_battle') }}">Combate pokemon</a>
+					<a href="{{ path('app_multibattle') }}">Duelos</a>
 					<a href="{{ path('app_history') }}">Historial de Combates</a>
 
 				</div>
