--- a/templates/multibattle/select_pokemon.html.twig
+++ b/templates/multibattle/select_pokemon.html.twig
@@ -44,7 +44,7 @@
 				</div>
 				<input type="hidden" name="select" value="{{ select }}">
 				<div class="center">
-					<input type="button" value="Listo!"></input>
+					<input type="submit" value="Listo!"></input>
 			</div>
 		</form>
 	{% endif %}
